# Shinobi

./: .gitignore  README.md
client/: Cargo.toml
client/.shinobi/: shinobisafe.toml
client/src/: lib.rs  main.rs  worker.rs
client/src/api/: client.rs  endpoints.rs  schemas.rs
client/src/cli/: args.rs  commands.rs  helpers.rs  mod.rs
client/src/decoder/: decoder.rs  mod.rs  worker.rs
client/src/errors/: errors.rs
client/src/service/: locator.rs  mod.rs
client/src/tests/: mod.rs  test-decoder.rs  test_data.json
server/: .air.toml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  go.mod  go.sum  main.go  nixpacks.toml
server/cmd/api/: api.go  context.go  errors.go  health.go  helpers.go  keys_tokens.go  main.go  middleware.go  project_allowed_users.go  projects.go  tokens.go  users.go
server/docs/: docs.go  swagger.json  swagger.yaml
server/internal/: generator.go
server/internal/db/: db.go
server/internal/env/: env.go
server/internal/jsonlog/: jsonlog.go
server/internal/qrcode-generator/: generator.go
server/internal/store/: keys_tokens.go  project_allowed_users.go  projects.go  qrc-generator.go  schemas.go  storage.go  tokens.go  users.go
web-client/: CHANGELOG.md  index.html
web-client/public/: CHANGELOG.md
web-client/src/: App.tsx  Changelog.tsx  Homepage.tsx  index.css
web_client/: CHANGELOG.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web_client/public/: CHANGELOG.md
web_client/src/: App.tsx  Changelog.tsx  Homepage.tsx  index.css  main.tsx
(+10 files in other folders)
