[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
quircs = "0.10.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.69"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
