[package]
name = "shinobi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
quircs = "0.10.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.69"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8.19"
ring = "0.17.8"
libc = "^0.2.167"
shinobi_secrets_server = { git = "ssh://git@github.com/luce-labs/shinobi-secrets-server", branch = "main" }
log = "0.4.22"
env_logger = "0.11.5"
